Implement page routing and template setup for other pages

--- a/server/package.json
+++ b/server/package.json
@@ -1,5 +1,19 @@
 {
+  "name": "server",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon index.js"
+  },
+  "author": "",
+  "license": "ISC",
+  "description": "",
   "dependencies": {
-    "file-server": "^2.2.1"
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
+    "file-server": "^2.2.1",
+    "nodemon": "^3.1.9",
+    "server": "file:"
   }
 }
