Minor Ui changes and images with system backend

--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.21.2",
     "file-server": "^2.2.1",
+    "mongoose": "^8.14.0",
     "nodemon": "^3.1.9",
     "server": "file:"
   }
