--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -14,11 +14,16 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "@mui/styled-engine-sc": "^7.0.2",
+    "@mui/x-date-pickers": "^8.0.0-beta.3",
+    "@mui/x-date-pickers-pro": "^8.1.0",
     "axios": "^1.8.4",
     "dashboard": "file:",
+    "dayjs": "^1.11.13",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "react-router-dom": "^7.5.1"
+    "react-router-dom": "^7.5.1",
+    "styled-components": "^6.1.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
