--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -17,9 +17,11 @@
     "@mui/styled-engine-sc": "^7.0.2",
     "@mui/x-date-pickers": "^8.0.0-beta.3",
     "@mui/x-date-pickers-pro": "^8.1.0",
+    "antd": "^5.24.8",
     "axios": "^1.8.4",
     "dashboard": "file:",
     "dayjs": "^1.11.13",
+    "jwt-decode": "^4.0.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.5.1",
