--- a/server/package.json
+++ b/server/package.json
@@ -10,11 +10,20 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
+    "dotenv": "^16.5.0",
     "express": "^4.21.2",
+    "express-async-errors": "^3.1.1",
+    "express-openid-connect": "^2.18.0",
     "file-server": "^2.2.1",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.14.0",
+    "multer": "^1.4.5-lts.2",
     "nodemon": "^3.1.9",
-    "server": "file:"
+    "server": "file:",
+    "sharp": "^0.34.1",
+    "uuid": "^11.1.0",
+    "validator": "^13.15.0"
   }
 }
