Fixed User page, Profile for 3 schemas of users types and added appointment stage for the Patients ongoing fix on Admin pannel

--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -13,9 +13,9 @@
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
-    "@mui/material": "^7.0.2",
+    "@mui/material": "^7.1.0",
     "@mui/styled-engine-sc": "^7.0.2",
-    "@mui/x-date-pickers": "^8.0.0-beta.3",
+    "@mui/x-date-pickers": "^8.3.0",
     "@mui/x-date-pickers-pro": "^8.1.0",
     "antd": "^5.24.8",
     "axios": "^1.8.4",
