--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -19,6 +19,7 @@
     "@mui/x-date-pickers-pro": "^8.1.0",
     "antd": "^5.24.8",
     "axios": "^1.8.4",
+    "browser-image-compression": "^2.0.2",
     "dashboard": "file:",
     "dayjs": "^1.11.13",
     "jwt-decode": "^4.0.0",
